--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,9 +1,9 @@
 attribution==1.5.2
-black==21.12b0
-coverage==6.2
+black==22.1.0
+coverage==6.3
 flake8==4.0.1
 flit==3.5.1
-mypy==0.910
-sphinx==4.3.1
+mypy==0.931
+sphinx==4.4.0
 ufmt==1.3.0
-usort==1.0.0rc1
+usort==1.0.1
